--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
         </header>
         <section>
             <article>
-                <img src="./resources/img/AlanTuring-2.jpg" alt="Alan Turing" /><!--(Birr-Pixton, 2005)-->
+                <img src="https://github.com/cwest2015/project-one/blob/gh-pages/images/AlanTuring-2.jpg" alt="Alan Turing" /><!--(Birr-Pixton, 2005)-->
                 <p id="citationHome">(Birr-Pixton, 2004)</p>
                 <p><a href="">What is the Turing Machine?</a></p>
             </article>
         </section>
         <footer>
             <p>2016 - Caleb West | For a list of source -> 
-                <a href="./resources/References.pdf">References</a>
+                <a href="./resources/References.docx">References</a>
             </p>
         </footer>
     </body>
