--- a/machine.html
+++ b/machine.html
@@ -80,7 +80,7 @@
         </section>
         <footer>
             <p>2016 - Caleb West | For a list of source -> 
-                <a href="./resources/References.pdf">References</a>
+                <a href="./resources/References.docx">References</a>
             </p>
         </footer>
     </body>
