--- a/project2.html
+++ b/project2.html
@@ -26,7 +26,7 @@
             <nav id="navBarFixed">
                 <div class="navBarMenu">
                     <ul class="navBarBlock">
-                        <li><a href="http://localhost/turing-portal/pages/index/">The Alan Turing Portal</a></li>
+                        <li><a href="./index.html">The Alan Turing Portal</a></li>
                         <li></li>
                         <li></li>
                         <li></li>
@@ -50,7 +50,7 @@
                         <li></li>
                         <li></li>
                         <li></li>
-                        <li><a href="http://localhost/turing-portal/pages/index/links/">Other Links</a></li>
+                        <li><a href="./links.html">Other Links</a></li>
                     </ul>
                 </div>
             </nav>
@@ -63,7 +63,7 @@
         </section>
         <footer>
             <p>2016 - Caleb West | For a list of source -> 
-                <a href="http://localhost/turing-portal/pages/index/resources/References.pdf">References</a>
+                <a href="./resources/References.docx">References</a>
             </p>
         </footer>
     </body>
