--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </header>
         <section>
             <article>
-                <img src="https://github.com/cwest2015/project-one/blob/gh-pages/images/AlanTuring-2.jpg" alt="Alan Turing" /><!--(Birr-Pixton, 2005)-->
+                <img src="http://cwest2015.github.io/project-one/images/AlanTuring-2.jpg" alt="Alan Turing" /><!--(Birr-Pixton, 2005)-->
                 <p id="citationHome">(Birr-Pixton, 2004)</p>
                 <p><a href="">What is the Turing Machine?</a></p>
             </article>
