--- a/links.html
+++ b/links.html
@@ -60,7 +60,7 @@
         <section>
             <article>
                 <div id="TuringPhoto">
-                     <img src="https://github.com/cwest2015/project-one/blob/gh-pages/images/Alan_Turing_Aged_16.jpg" alt="Young Turing Photo" /><!--(Unknown Author, 1927)-->
+                     <img src="http://cwest2015.github.io/project-one/images/Alan_Turing_Aged_16.jpg" alt="Young Turing Photo" /><!--(Unknown Author, 1927)-->
                      <p>https://en.wikipedia.org/wiki/Alan_Turing#/media/File:Alan_Turing_Aged_16.jpg<br/>(Unknown Author, 1927)</p>
                 </div>
             </article>
