--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <article>
                 <img src="http://cwest2015.github.io/project-one/images/AlanTuring-2.jpg" alt="Alan Turing" /><!--(Birr-Pixton, 2005)-->
                 <p id="citationHome">(Birr-Pixton, 2004)</p>
-                <p><a href="">What is the Turing Machine?</a></p>
+                <p><a href="./machine.html">What is the Turing Machine?</a></p>
             </article>
         </section>
         <footer>
