--- a/links.html
+++ b/links.html
@@ -77,7 +77,7 @@
         </section>
         <footer>
             <p>2016 - Caleb West | For a list of source -> 
-                <a href="./resources/References.pdf">References</a></p>
+                <a href="./resources/References.docx">References</a></p>
         </footer>
     </body>
 </html>
