--- a/machine.html
+++ b/machine.html
@@ -26,7 +26,7 @@
            <nav id="navBarFixed">
                 <div class="navBarMenu">
                     <ul class="navBarBlock">
-                        <li><a href="./index/">The Alan Turing Portal</a></li>
+                        <li><a href="./index.html">The Alan Turing Portal</a></li>
                         <li></li>
                         <li></li>
                         <li></li>
